# fAInance-bros

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  analyze.py  chat.py  config.py  docker-compose.yml  portfolio_analyzer.py  pyproject.toml  requirements.txt  technical.py  utils.py  visualization.py
agents/: __init__.py  analyzer.py  collector.py  company_profile.py  context.py  global_news.py  macro_advisor.py  portfolio_reporter.py  reporter.py  targeted_news.py
data/: sources.py  storage.py
