[project]
name = "fAInance-bros"
version = "0.1.0"
description = "AI-powered stock analysis for Oslo Stock Exchange"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "langgraph>=0.2.0",
    "yfinance>=0.2.40",
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "markdown-pdf>=1.3",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
analyze = "analyze:main"
